--- a/about.qmd
+++ b/about.qmd
@@ -17,7 +17,7 @@ Vim cu voluptatum ullamcorper. Ex zril bonorum interpretaris his, stet efficiant
 
 #### Pete Benbow
 
-I'm a Cabarrus County native, having been born, raised, and educated in Concord. I attended Beverly Hills Elementary, Concord Middle, and Concord High before completing my undergraduate studies just down the road at Davidson College. I grew up in the First Presbyterian Church of Concord and gave back to my community as a member of BSA Troop 3 and the Tarheel Keystone Club.
+I'm a Cabarrus County native, having been born, raised, and educated in Concord. I attended Beverly Hills Elementary, Concord Middle, and Concord High before completing my undergraduate studies just down the road at Davidson College. I grew up in the First Presbyterian Church of Concord and gave back to my community as a member of BSA Troop 3 and the Tarheel Keystone Club. I now have the privilege of teaching at Davidson as the James B. Duke Assistant Professor of the Practice in Data Science.
 
 My wife, Megan, was also born, raised, and educated in Cabarrus County, having graduated from Northwest Cabarrus HS before attending UNC Chapel Hill. She grew up attending All Saints Episcopal Church. We bought our first home together in Concord in 2016. This county is part of our DNA.
 
