Added a description paragraph to index

--- a/index.qmd
+++ b/index.qmd
@@ -13,5 +13,6 @@ about:
 ---
 
 :::{#hero-heading}
+Cabarrus Data Lab is an independent, non-partisan venture aimed at using data to improve awareness of social and economic stories in Cabarrus County, North Carolina.
 :::
 
